<resources>
    <string name="app_name">FoodOrderingApp</string>

    <string name="splash_label">Foodies Cafe</string>
    <string name="splash_msg">Order Your Food</string>
    <string name="splash_btn_start">Get Started</string>

    <string name="home_msg_1">Order &amp; Eat</string>
    <string name="home_banner_title">Free Deliviery</string>
    <string name="label_categories">Categories</string>
    <string name="label_popular">Popular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_cart">My Cart</string>
    <string name="item_total">Item Total:</string>
    <string name="delivery">Delivery Services:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="checkout">Checkout</string>
    <string name="cart_empty">Your cart is empty</string>


    <string name="enter_credentials">Enter your email and password to continue</string>
    <string name="customer_info">Customer Information</string>
    <string name="delivery_info">Delivery Information</string>
    <string name="payment_info">Payment Information</string>
    <string name="delivery_area_error">"Location is beyond the delivery area"</string>


    <string name="name_required_error">Name field cannot be empty</string>
    <string name="email_required_error">Email field cannot be empty</string>
    <string name="field_required_error">Field cannot be empty</string>
    <string name="password_required_error">Password field cannot be empty.</string>
    <string name="mobile_required_error">Mobile Number field cannot be empty</string>
    <string name="email_valid_error">"Provide a valid email address</string>
    <string name="address_required_error">Address field cannot be empty.</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="support">Support</string>
    <string name="setting">Setting</string>

    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="cash_on_delivery"> Cash On Delivery</string>
    <string name="credit_debit_card"> Credit/Debit Card</string>
    <string name="place_order">Place Order</string>

    <string name="area_error">Area out of Reach</string>
    <string name="track_order">Track Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_proceeding">Order Proceeding</string>
    <string name="order_proceed">Order Proceed</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="order_delivered">Order Diliverd</string>
    <string name="internet_error_msg">Looks like you\'re having internet issues</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
    <string name="order_confirmed">Your Order is Confirmed</string>

    <string name="email_verify">Please verify your email</string>
    <string name="order_delivered_message">Enjoy Your Order</string>
    <string name="upload_image">"Please Upload Image"</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="enable_location">"Enable Location"</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="customer_location">Customer Location</string>
    <string name="rider_location">Rider Location</string>
    <string name="your_location">Your Location</string>
    <string name="wait">Wait for a while</string>
    <string name="view">View</string>
    <string name="view_running_order">View Running Order</string>
    <string name="server_client_id">715118815311-i02j0gdueerkipn05tdgb2qdl1te9o4e.apps.googleusercontent.com</string>


</resources>